lib/parser/letter.js
LetterWriter.parser = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "start": parse_start,
        "statement": parse_statement,
        "score_param_decl": parse_score_param_decl,
        "title_decl": parse_title_decl,
        "roles_decl": parse_roles_decl,
        "undo": parse_undo,
        "param_decl": parse_param_decl,
        "param_list": parse_param_list,
        "param_value": parse_param_value,
        "param_range": parse_param_range,
        "nonterm_symbol": parse_nonterm_symbol,
        "rule": parse_rule,
        "nonterm_modifier": parse_nonterm_modifier,
        "rhs_list": parse_rhs_list,
        "rhs": parse_rhs,
        "ui_rhs": parse_ui_rhs,
        "hint_with_modifiers": parse_hint_with_modifiers,
        "hint_text": parse_hint_text,
        "hint_modifier": parse_hint_modifier,
        "times_hidden": parse_times_hidden,
        "max_count": parse_max_count,
        "positive_integer": parse_positive_integer,
        "sym_expr": parse_sym_expr,
        "anonymous_nonterm": parse_anonymous_nonterm,
        "preamble_placeholder_prompt": parse_preamble_placeholder_prompt,
        "sym_modifier": parse_sym_modifier,
        "pause_modifier": parse_pause_modifier,
        "commit_modifier": parse_commit_modifier,
        "random_modifier": parse_random_modifier,
        "text": parse_text,
        "text_chars": parse_text_chars,
        "symbol": parse_symbol,
        "spc": parse_spc,
        "comment": parse_comment,
        "multi_line_comment": parse_multi_line_comment,
        "single_line_comment": parse_single_line_comment,
        "line_terminator": parse_line_terminator,
        "source_character": parse_source_character,
        "sum_weight_expr": parse_sum_weight_expr,
        "product_weight_expr": parse_product_weight_expr,
        "primary_weight_expr": parse_primary_weight_expr,
        "param_func": parse_param_func,
        "param_identifier": parse_param_identifier,
        "bare_param_id": parse_bare_param_id,
        "clothed_param_id": parse_clothed_param_id,
        "numeric_literal": parse_numeric_literal,
        "nonnegative_numeric_literal": parse_nonnegative_numeric_literal,
        "linespc": parse_linespc,
        "param_assignment": parse_param_assignment,
        "cumulative_op": parse_cumulative_op,
        "param_terminator": parse_param_terminator,
        "param_expansion": parse_param_expansion,
        "param_expr": parse_param_expr,
        "sum_expr": parse_sum_expr,
        "product_expr": parse_product_expr,
        "primary_expr": parse_primary_expr,
        "string_literal": parse_string_literal,
        "double_quoted_text": parse_double_quoted_text,
        "single_quoted_text": parse_single_quoted_text
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "start";
      }
      
      var pos = { offset: 0, line: 1, column: 1, seenCR: false };
      var reportFailures = 0;
      var rightmostFailuresPos = { offset: 0, line: 1, column: 1, seenCR: false };
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function clone(object) {
        var result = {};
        for (var key in object) {
          result[key] = object[key];
        }
        return result;
      }
      
      function advance(pos, n) {
        var endOffset = pos.offset + n;
        
        for (var offset = pos.offset; offset < endOffset; offset++) {
          var ch = input.charAt(offset);
          if (ch === "\n") {
            if (!pos.seenCR) { pos.line++; }
            pos.column = 1;
            pos.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            pos.line++;
            pos.column = 1;
            pos.seenCR = true;
          } else {
            pos.column++;
            pos.seenCR = false;
          }
        }
        
        pos.offset += n;
      }
      
      function matchFailed(failure) {
        if (pos.offset < rightmostFailuresPos.offset) {
          return;
        }
        
        if (pos.offset > rightmostFailuresPos.offset) {
          rightmostFailuresPos = clone(pos);
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_start() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = [];
        result1 = parse_spc();
        while (result1 !== null) {
          result0.push(result1);
          result1 = parse_spc();
        }
        if (result0 !== null) {
          result1 = [];
          result2 = parse_statement();
          while (result2 !== null) {
            result1.push(result2);
            result2 = parse_statement();
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column) { return { title: title,
        				  roles: roles,
        				  nonterm: nontermObj,
        				  start: getStart(),
        				  nonterms: nonterms.map(function(id){return nontermObj[id]}),
        				  params: params,
        				  scoreParam: scoreParam,
        				  scoreParamType: scoreParamType,
        				  undo: undo } })(pos0.offset, pos0.line, pos0.column);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_statement() {
        var result0;
        
        result0 = parse_title_decl();
        if (result0 === null) {
          result0 = parse_roles_decl();
          if (result0 === null) {
            result0 = parse_score_param_decl();
            if (result0 === null) {
              result0 = parse_param_decl();
              if (result0 === null) {
                result0 = parse_undo();
                if (result0 === null) {
                  result0 = parse_rule();
                }
              }
            }
          }
        }
        return result0;
      }
      
      function parse_score_param_decl() {
        var result0, result1, result2, result3, result4;
        var pos0;
        
        pos0 = clone(pos);
        if (input.substr(pos.offset, 5) === "score") {
          result0 = "score";
          advance(pos, 5);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"score\"");
          }
        }
        if (result0 !== null) {
          result2 = parse_spc();
          if (result2 !== null) {
            result1 = [];
            while (result2 !== null) {
              result1.push(result2);
              result2 = parse_spc();
            }
          } else {
            result1 = null;
          }
          if (result1 !== null) {
            result2 = parse_bare_param_id();
            if (result2 !== null) {
              result3 = [];
              result4 = parse_spc();
              while (result4 !== null) {
                result3.push(result4);
                result4 = parse_spc();
              }
              if (result3 !== null) {
                result4 = (function(offset, line, column, id) { return addScoreParam(id[0],id[1]) })(pos.offset, pos.line, pos.column, result2) ? "" : null;
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = clone(pos0);
                }
              } else {
                result0 = null;
                pos = clone(pos0);
              }
            } else {
              result0 = null;
              pos = clone(pos0);
            }
          } else {
            result0 = null;
            pos = clone(pos0);
          }
        } else {
          result0 = null;
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_title_decl() {
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        if (input.substr(pos.offset, 5) === "title") {
          result0 = "title";
          advance(pos, 5);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"title\"");
          }
        }
        if (result0 !== null) {
          result2 = parse_spc();
          if (result2 !== null) {
            result1 = [];
            while (result2 !== null) {
              result1.push(result2);
              result2 = parse_spc();
            }
          } else {
            result1 = null;
          }
          if (result1 !== null) {
            if (input.charCodeAt(pos.offset) === 123) {
              result2 = "{";
              advance(pos, 1);
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"{\"");
              }
            }
            if (result2 !== null) {
              result3 = parse_text();
              if (result3 !== null) {
                if (input.charCodeAt(pos.offset) === 125) {
                  result4 = "}";
                  advance(pos, 1);
                } else {
                  result4 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"}\"");
                  }
                }
                if (result4 !== null) {
                  result5 = [];
                  result6 = parse_spc();
                  while (result6 !== null) {
                    result5.push(result6);
                    result6 = parse_spc();
                  }
                  if (result5 !== null) {
                    result0 = [result0, result1, result2, result3, result4, result5];
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, t) { title = t; })(pos0.offset, pos0.line, pos0.column, result0[3]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_roles_decl() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        if (input.substr(pos.offset, 5) === "roles") {
          result0 = "roles";
          advance(pos, 5);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"roles\"");
          }
        }
        if (result0 !== null) {
          result2 = parse_spc();
          if (result2 !== null) {
            result1 = [];
            while (result2 !== null) {
              result1.push(result2);
              result2 = parse_spc();
            }
          } else {
            result1 = null;
          }
          if (result1 !== null) {
            result2 = parse_positive_integer();
            if (result2 !== null) {
              result3 = [];
              result4 = parse_spc();
              while (result4 !== null) {
                result3.push(result4);
                result4 = parse_spc();
              }
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, n) { roles = n; })(pos0.offset, pos0.line, pos0.column, result0[2]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_undo() {
        var result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10, result11, result12;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        if (input.substr(pos.offset, 4) === "undo") {
          result0 = "undo";
          advance(pos, 4);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"undo\"");
          }
        }
        if (result0 !== null) {
          result1 = [];
          result2 = parse_spc();
          while (result2 !== null) {
            result1.push(result2);
            result2 = parse_spc();
          }
          if (result1 !== null) {
            if (input.charCodeAt(pos.offset) === 123) {
              result2 = "{";
              advance(pos, 1);
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"{\"");
              }
            }
            if (result2 !== null) {
              result3 = [];
              result4 = parse_spc();
              while (result4 !== null) {
                result3.push(result4);
                result4 = parse_spc();
              }
              if (result3 !== null) {
                if (input.substr(pos.offset, 4) === "wait") {
                  result4 = "wait";
                  advance(pos, 4);
                } else {
                  result4 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"wait\"");
                  }
                }
                if (result4 !== null) {
                  result5 = [];
                  result6 = parse_spc();
                  while (result6 !== null) {
                    result5.push(result6);
                    result6 = parse_spc();
                  }
                  if (result5 !== null) {
                    if (input.charCodeAt(pos.offset) === 58) {
                      result6 = ":";
                      advance(pos, 1);
                    } else {
                      result6 = null;
                      if (reportFailures === 0) {
                        matchFailed("\":\"");
                      }
                    }
                    if (result6 !== null) {
                      result7 = [];
                      result8 = parse_spc();
                      while (result8 !== null) {
                        result7.push(result8);
                        result8 = parse_spc();
                      }
                      if (result7 !== null) {
                        result8 = parse_nonnegative_numeric_literal();
                        if (result8 !== null) {
                          result9 = [];
                          result10 = parse_spc();
                          while (result10 !== null) {
                            result9.push(result10);
                            result10 = parse_spc();
                          }
                          if (result9 !== null) {
                            if (input.charCodeAt(pos.offset) === 125) {
                              result10 = "}";
                              advance(pos, 1);
                            } else {
                              result10 = null;
                              if (reportFailures === 0) {
                                matchFailed("\"}\"");
                              }
                            }
                            if (result10 !== null) {
                              result11 = [];
                              result12 = parse_spc();
                              while (result12 !== null) {
                                result11.push(result12);
                                result12 = parse_spc();
                              }
                              if (result11 !== null) {
                                result0 = [result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10, result11];
                              } else {
                                result0 = null;
                                pos = clone(pos1);
                              }
                            } else {
                              result0 = null;
                              pos = clone(pos1);
                            }
                          } else {
                            result0 = null;
                            pos = clone(pos1);
                          }
                        } else {
                          result0 = null;
                          pos = clone(pos1);
                        }
                      } else {
                        result0 = null;
                        pos = clone(pos1);
                      }
                    } else {
                      result0 = null;
                      pos = clone(pos1);
                    }
                  } else {
                    result0 = null;
                    pos = clone(pos1);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, w) { undo.wait = w; })(pos0.offset, pos0.line, pos0.column, result0[8]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_param_decl() {
        var result0, result1, result2, result3, result4;
        var pos0;
        
        pos0 = clone(pos);
        if (input.substr(pos.offset, 7) === "control") {
          result0 = "control";
          advance(pos, 7);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"control\"");
          }
        }
        if (result0 !== null) {
          result2 = parse_spc();
          if (result2 !== null) {
            result1 = [];
            while (result2 !== null) {
              result1.push(result2);
              result2 = parse_spc();
            }
          } else {
            result1 = null;
          }
          if (result1 !== null) {
            result2 = parse_param_list();
            if (result2 !== null) {
              result3 = [];
              result4 = parse_spc();
              while (result4 !== null) {
                result3.push(result4);
                result4 = parse_spc();
              }
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = clone(pos0);
              }
            } else {
              result0 = null;
              pos = clone(pos0);
            }
          } else {
            result0 = null;
            pos = clone(pos0);
          }
        } else {
          result0 = null;
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_param_list() {
        var result0, result1, result2, result3, result4, result5, result6, result7, result8, result9, result10;
        var pos0, pos1;
        
        pos0 = clone(pos);
        if (input.charCodeAt(pos.offset) === 36) {
          result0 = "$";
          advance(pos, 1);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"$\"");
          }
        }
        if (result0 !== null) {
          result1 = parse_symbol();
          if (result1 !== null) {
            result2 = [];
            result3 = parse_spc();
            while (result3 !== null) {
              result2.push(result3);
              result3 = parse_spc();
            }
            if (result2 !== null) {
              result3 = parse_param_range();
              if (result3 !== null) {
                result4 = [];
                result5 = parse_spc();
                while (result5 !== null) {
                  result4.push(result5);
                  result5 = parse_spc();
                }
                if (result4 !== null) {
                  result5 = parse_param_value();
                  if (result5 !== null) {
                    result6 = [];
                    result7 = parse_spc();
                    while (result7 !== null) {
                      result6.push(result7);
                      result7 = parse_spc();
                    }
                    if (result6 !== null) {
                      result7 = (function(offset, line, column, p, r, v) {return addParam(p,v,r[0],r[1])})(pos.offset, pos.line, pos.column, result1, result3, result5) ? "" : null;
                      if (result7 !== null) {
                        pos1 = clone(pos);
                        if (input.charCodeAt(pos.offset) === 44) {
                          result8 = ",";
                          advance(pos, 1);
                        } else {
                          result8 = null;
                          if (reportFailures === 0) {
                            matchFailed("\",\"");
                          }
                        }
                        if (result8 !== null) {
                          result9 = [];
                          result10 = parse_spc();
                          while (result10 !== null) {
                            result9.push(result10);
                            result10 = parse_spc();
                          }
                          if (result9 !== null) {
                            result10 = parse_param_list();
                            if (result10 !== null) {
                              result8 = [result8, result9, result10];
                            } else {
                              result8 = null;
                              pos = clone(pos1);
                            }
                          } else {
                            result8 = null;
                            pos = clone(pos1);
                          }
                        } else {
                          result8 = null;
                          pos = clone(pos1);
                        }
                        result8 = result8 !== null ? result8 : "";
                        if (result8 !== null) {
                          result0 = [result0, result1, result2, result3, result4, result5, result6, result7, result8];
                        } else {
                          result0 = null;
                          pos = clone(pos0);
                        }
                      } else {
                        result0 = null;
                        pos = clone(pos0);
                      }
                    } else {
                      result0 = null;
                      pos = clone(pos0);
                    }
                  } else {
                    result0 = null;
                    pos = clone(pos0);
                  }
                } else {
                  result0 = null;
                  pos = clone(pos0);
                }
              } else {
                result0 = null;
                pos = clone(pos0);
              }
            } else {
              result0 = null;
              pos = clone(pos0);
            }
          } else {
            result0 = null;
            pos = clone(pos0);
          }
        } else {
          result0 = null;
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_param_value() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        if (input.charCodeAt(pos.offset) === 61) {
          result0 = "=";
          advance(pos, 1);
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"=\"");
          }
        }
        if (result0 !== null) {
          result1 = [];
          result2 = parse_spc();
          while (result2 !== null) {
            result1.push(result2);
            result2 = parse_spc();
          }
          if (result1 !== null) {
            result2 = parse_nonnegative_numeric_literal();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, v) { return v })(pos0.offset, pos0.line, pos0.column, result0[2]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        if (result0 === null) {
          pos0 = clone(pos);
          pos1 = clone(pos);
          result0 = [];
          if (result0 !== null) {
            result0 = (function(offset, line, column) { return 0.5 })(pos0.offset, pos0.line, pos0.column);
          }
          if (result0 === null) {
